--- a/templates/Blazor/BlazorApp/BlazorApp/BlazorApp/Components/Layout/NavMenu.razor
+++ b/templates/Blazor/BlazorApp/BlazorApp/BlazorApp/Components/Layout/NavMenu.razor
@@ -9,15 +9,14 @@
     <AuthorizeView>
         <Authorized>
             <MudNavLink Href="Account/Manage" Icon="@Icons.Material.Filled.Person">@context.User.Identity?.Name</MudNavLink>
-            <MudNavGroup Title="Logout" Icon="@Icons.Material.Filled.Logout" Expanded="false">
-                <form action="Account/Logout" method="post">
-                    <AntiforgeryToken />
-                    <input type="hidden" name="ReturnUrl" value="@currentUrl" />
-                    <MudButton ButtonType="ButtonType.Submit" Variant="Variant.Text" Color="Color.Default" FullWidth="true" StartIcon="@Icons.Material.Filled.Logout">
-                        Logout
-                    </MudButton>
-                </form>
-            </MudNavGroup>
+            <form action="Account/Logout" method="post" style="all: unset; display: contents;">
+                <AntiforgeryToken />
+                <input type="hidden" name="ReturnUrl" value="@currentUrl" />
+                <button type="submit" style="all: unset; width: 100%; text-align: left; cursor: pointer; display: flex; align-items: center; padding: 6px 16px; color: inherit; text-decoration: none;">
+                    <MudIcon Icon="@Icons.Material.Filled.Logout" Style="margin-right: 16px;" />
+                    <span>Logout</span>
+                </button>
+            </form>
         </Authorized>
         <NotAuthorized>
             <MudNavLink Href="Account/Register" Icon="@Icons.Material.Filled.PersonAdd">Register</MudNavLink>
