--- a/templates/Blazor/BlazorApp/BlazorApp/BlazorApp/Components/Account/Pages/Manage/ChangePassword.razor
+++ b/templates/Blazor/BlazorApp/BlazorApp/BlazorApp/Components/Account/Pages/Manage/ChangePassword.razor
@@ -19,30 +19,33 @@
         <DataAnnotationsValidator />
         <ValidationSummary class="text-danger" role="alert" />
         
-        <MudTextField @bind-Value="Input.OldPassword" 
-                      For="@(() => Input.OldPassword)"
+        <MudTextField name="Input.OldPassword"
+                      Value="@Input.OldPassword"
                       Label="Old password" 
                       Variant="Variant.Outlined"
                       InputType="InputType.Password"
                       autocomplete="current-password"
+                      Placeholder="current password"
                       Required="true"
                       Class="mb-4" />
         
-        <MudTextField @bind-Value="Input.NewPassword" 
-                      For="@(() => Input.NewPassword)"
+        <MudTextField name="Input.NewPassword"
+                      Value="@Input.NewPassword"
                       Label="New password" 
                       Variant="Variant.Outlined"
                       InputType="InputType.Password"
                       autocomplete="new-password"
+                      Placeholder="new password"
                       Required="true"
                       Class="mb-4" />
         
-        <MudTextField @bind-Value="Input.ConfirmPassword" 
-                      For="@(() => Input.ConfirmPassword)"
+        <MudTextField name="Input.ConfirmPassword"
+                      Value="@Input.ConfirmPassword"
                       Label="Confirm password" 
                       Variant="Variant.Outlined"
                       InputType="InputType.Password"
                       autocomplete="new-password"
+                      Placeholder="confirm password"
                       Required="true"
                       Class="mb-4" />
         
