--- a/templates/Blazor/BlazorApp/BlazorApp/BlazorApp/Components/Account/Pages/Register.razor
+++ b/templates/Blazor/BlazorApp/BlazorApp/BlazorApp/Components/Account/Pages/Register.razor
@@ -23,35 +23,39 @@
         <MudItem xs="12" md="7">
             <MudPaper Elevation="2" Class="pa-4">
                 <StatusMessage Message="@Message" />
-                <EditForm Model="Input" method="post" OnValidSubmit="RegisterUser" FormName="register">
+                <EditForm Model="Input" asp-route-returnUrl="@ReturnUrl" method="post" OnValidSubmit="RegisterUser" FormName="register">
                     <DataAnnotationsValidator />
                     <MudText Typo="Typo.h6" Class="mb-3">Create a new account.</MudText>
                     <MudDivider Class="mb-4" />
                     <ValidationSummary class="text-danger" role="alert" />
                     
-                    <MudTextField @bind-Value="Input.Email" 
-                                  For="@(() => Input.Email)"
-                                  Label="Email" 
+                    <MudTextField Label="Email"
+                                  name="Input.Email"
+                                  Value="@Input.Email"
                                   Variant="Variant.Outlined"
+                                  InputType="InputType.Email"
                                   autocomplete="username"
+                                  Placeholder="name@example.com"
                                   Required="true"
                                   Class="mb-4" />
                     
-                    <MudTextField @bind-Value="Input.Password" 
-                                  For="@(() => Input.Password)"
-                                  Label="Password" 
+                    <MudTextField Label="Password"
+                                  name="Input.Password"
+                                  Value="@Input.Password"
                                   Variant="Variant.Outlined"
                                   InputType="InputType.Password"
                                   autocomplete="new-password"
+                                  Placeholder="password"
                                   Required="true"
                                   Class="mb-4" />
                     
-                    <MudTextField @bind-Value="Input.ConfirmPassword" 
-                                  For="@(() => Input.ConfirmPassword)"
-                                  Label="Confirm Password" 
+                    <MudTextField Label="Confirm Password"
+                                  name="Input.ConfirmPassword"
+                                  Value="@Input.ConfirmPassword"
                                   Variant="Variant.Outlined"
                                   InputType="InputType.Password"
                                   autocomplete="new-password"
+                                  Placeholder="password"
                                   Required="true"
                                   Class="mb-4" />
                     
